Release 0.1-1:
  * Fixed -Wextra compiler warnings.

Release 0.1-0:
  * Added score().
  * Added multi-corpus parallelism via OpenMP.