@@ -1,5 +1,6 @@
 Release 0.1-1:
   * Fixed -Wextra compiler warnings.
+  * Wrote a more coherent description.
 
 Release 0.1-0:
   * Added score().
